Changes in 0.91
* Updates to fine_map

Changes in 0.90
* Added constraint that sum of qtl effects (for each order) is zero
* Inclusion of CI for fitQTL is now optional

Changes in 0.89
* Changed R2 to r2

Changes in 0.88
* Modified haplo_switch to become fine_map
* Added bioRxiv citation

Changes in 0.87
* Modified haplo_unique to become haplo_cluster

Changes in 0.86
* Removed valents_summary
* Added digenic model to LODthresh 
* Updated potato dataset

Changes in 0.85
* Modified haplo_freq plot, now returns frequency of individuals
* Fixed read_polyancestry to handle degenerate case of 1 pop with 1 chrom
* Added functions phased_parents and haplo_unique

Changes in 0.84
* Added function valents_summary

Changes in 0.83
* Added polygenic effect to fitQTL

Changes in 0.82
* Check whether marker is valid in set_params
* Updated recommendation for set_params

Changes in 0.81
* Added function BayesCI
* cM no longer optional 

Changes in 0.80
* modified interface for set_params 
* merged Amat and Dmat into IBDmat
* fitQTL returns residuals 
* fitQTL returns Bayesian CI
* Changed color scheme for fitQTL plots
* Dominance plot from fitQTL has dom above diagonal, add + dom below diagonal

Changes in 0.79
* Cosmetic change to scaling of GCA

Changes in 0.78
* Fixed bug in read_polyancestry
* explicitly set stringsAsFactors = T when reading phenofile
* Fixed tmp directory issue

Changes in 0.77
* Changed terminology from "haplotype.pairs" to "diplotypes"
* Added functions to get and plot diplotype dosage
* Added function to create input files from PolyOrigin output file
* Changed formatting of output for fitQTL
* BGLR output files now put in tmp directory

Changes in 0.76
* Adjusted frequency in haplo_freq by ploidy

Changes in 0.75
* Can now include multiple markers in haplo_plot
* Fixed labeling error in fitQTL plot for diploids
* Fixed error with dominance effects for diploids

Changes in 0.74
* scan1 output now includes all markers, not just bins