@@ -35,7 +35,10 @@ importFrom(coda,raftery.diag)
 importFrom(ggfittext,geom_fit_text)
 importFrom(labeling,extended)
 importFrom(methods,new)
-importFrom(parallel,mclapply)
+importFrom(parallel,clusterExport)
+importFrom(parallel,makeCluster)
+importFrom(parallel,parLapply)
+importFrom(parallel,stopCluster)
 importFrom(scam,predict.scam)
 importFrom(stats,as.dendrogram)
 importFrom(stats,cor)
