@@ -30,7 +30,7 @@ scan1_permute(
 
 \item{cofactor}{Optional name of marker to include as cofactor in the scan}
 
-\item{n.core}{Number of cores for parallel execution (only available from Linux or Mac command line)}
+\item{n.core}{Number of cores for parallel execution}
 }
 \value{
 Data frame with maximum LOD and minimum deltaDIC for each iteration
